[tool.poetry]
name = "jeeves-pr-stack"
version = "0.1.0"
description = "Manage GitHub Pull Request stacks."
authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
jeeves-shell = {extras = ["all"], version = "^2.2.0"}

[tool.poetry.group.dev.dependencies]
jeeves-yeti-pyproject = "^0.2.20"

[tool.poetry.plugins.jeeves]
pr_stack = "jeeves_pr_stack:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
